# raggiro

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CLAUDE_CONTEXT.md  CLAUDE_CONTEXT_backup-uv-changes.md  CLAUDE_CONTEXT_docling-fork.md  CLAUDE_CONTEXT_main.md  CONTRIBUTING.md  README.md  TODO.md  check_promptfoo.py  direct_run.py  install_promptfoo.sh  pyproject.toml  requirements-dev.txt  requirements.txt  run_semantic_chunking_test.sh  run_streamlit.sh  run_test_comparison.sh  setup.py  test_pipeline.py  test_rag.py  test_results.md  test_simple.py  test_toc_detection.py  verify_promptfoo.sh
.github/workflows/: tests.yml
config/: Humanizar_it_prompts.yaml  config.toml  kenny_werner_test_prompts.yaml  test_prompts.yaml
config_backup/: Scrum-Guide-Italian_prompts.yaml  WEF_Future_of_Jobs_Report_2025_prompts.yaml  custom_test_prompts.yaml  kenny_werner_test_prompts.yaml
docs/: api.md  commands.md  configuration.md  document_classification.md  gui.md  installation.md  rag.md  spacy.md  testing.md
docs/future_considerations/: docling_integration.md  gui_migration.md  migration_alternatives.md  vector_storage_comparison.md
docs/images/: document_classification_flow.md
examples/: basic_usage.py  openai_integration.py  summary_enhanced_search.py  test_semantic_chunking.py
examples/documents/: sample_report.md
examples/scripts/: test_rag_comparison.py  test_semantic_chunking.py  test_summary_search.py
raggiro/: __init__.py  processor.py
raggiro/cli/: __init__.py  main.py
raggiro/core/: __init__.py  cleaner.py  exporter.py  extractor.py  file_handler.py  logger.py  metadata.py  segmenter.py  spelling.py
raggiro/data/: __init__.py  skipwords.py
raggiro/data/dictionaries/: __init__.py  frequency_dictionary_it.txt
raggiro/gui/: __init__.py  imports_for_streamlit.py  streamlit_app.py  textual_app.py
raggiro/models/: __init__.py  classifier.py
raggiro/pipelines/: __init__.py  technical_pipeline.py
raggiro/rag/: __init__.py  generator.py  indexer.py  pipeline.py  retriever.py  rewriter.py
raggiro/testing/: __init__.py  promptfoo_runner.py
raggiro/utils/: __init__.py  config.py  unicode_normalizer.py
scripts/: verify_prompt_files.py
scripts/gui/: launch_gui.py  run_streamlit.sh
scripts/installation/: install_nltk.sh  setup_dev_env.sh  verify_promptfoo.sh
scripts/testing/: run_semantic_chunking_test.sh  run_test_comparison.sh
scripts/utils/: check_promptfoo.py  direct_run.py
test_prompts/: README.md  cancion_peregrino.yaml  capitolato_tecnico.yaml  future_of_jobs.yaml  hornresp_manual.yaml  humanizar.yaml  kenny_werner.yaml  psn_allegato.yaml  run_all_tests.sh  scrum_guide.yaml
